SERVER-132433 Exclude findAndModify from the WithoutShardKeyWithId delete broadcast (#59826)

GitOrigin-RevId: 5db7fdeb1be4a4908946f08b27cc986fb70757d1